1.5.13 changes
--------------
- add checks for NULL in udev-configure-printer (Fedora #1761097)

1.5.12 changes
--------------
- when you use different component id, add provide for old name (issues/99)
- fix other issues in system-config-printer.appdata.xml to be completely valid 
  for new format
- make the appstream file validate with version >= 0.6 (issues/97)
- fixes for scp-dbus-services (pull/96)
- use ValueError instead of ImportError (pull/95)
- fix constructing the auth dialog (pull/93)
- update da.po (pull/102)
- use utf-8 in fdopen() (pull/112)
- Fallback to using LC_CTYPE if LC_MESSAGES is empty and fix _language use (pull/108)
- Update de.po (pull/106)
- Fix TypeError raised by debugprint call (pull/121)
- dbus: remove deprecated at_console statement (pull/123)
- fixed several memory leaks reported by Coverity scan
- temporary fix for error pop up message for IPP2.0+ attributes (issues/122)
- lpd queue names printed on the console (issues/132)
- use proper docstring (pull/130)
- remove deprecated SIGNAL_RUN_LAST (pull/134)
- use remote ppd for CUPS shared queues (pull/137)
- get rid of warnings in applet (Fedora issue #1732890)
- check if we have required parameters in install-printerdriver (Fedora issue #1754204)

1.5.10 changes
--------------

- printer couldn't be add ( https://bugzilla.redhat.com/show_bug.cgi?id=1419175 ) 
- changes from Ubuntu by Till Kamppeter (pull/64)
- .travis.yml: switch from precise to trusty (pull/63)
- Replace icons deprecated by GTK 3.0 by non-deprecated ones (pull/62)
- Add a StartService for systemd based systems (pull/56)
- French translation update (pull/57) 
- Spelling fixes (pull/58)
- Syntax fixes (pull/59)
- Python 3.6 invalid escape sequence deprecation fixes (pull/60)
- Adds printer properties dialog vertical expansion (pull/61)
- Replace icons deprecated by GTK 3.0 by non-deprecated ones (pull/62) 
- Improvements of discovered devices/conection type lists in new-printer wizard, more debug output (pull/65)