@@ -1,6 +1,7 @@
 1.5.13 changes
 --------------
 - add checks for NULL in udev-configure-printer (Fedora #1761097)
+- github #174 - put back notification about missing pysmbc
 
 1.5.12 changes
 --------------
